@@ -2063,6 +2063,9 @@ WIDGET_DEFAULT = {
         "negative_position_color": "#FF2200",
         "bkg_color": "#222222",
         "position_max_range": 100,
+        "show_third_spring_position_mark": True,
+        "third_spring_position_mark_width": 2,
+        "third_spring_position_mark_color": "#FFFFFF",
         "show_caption": False,
         "font_scale_caption": 0.8,
         "caption_text": "susp pos",
