@@ -51,6 +51,11 @@ class Realtime(Overlay):
         bar_width = max(self.wcfg["bar_width"], 20)
         bar_height = int(font_m.capital + pady * 2)
         max_range = max(int(self.wcfg["position_max_range"]), 10)
+        mark_color = (
+            self.wcfg["third_spring_position_mark_color"]
+            if self.wcfg["show_third_spring_position_mark"]
+            else ""
+        )
 
         # Caption
         if self.wcfg["show_caption"]:
@@ -88,6 +93,8 @@ class Realtime(Overlay):
                 input_color=self.wcfg["positive_position_color"],
                 fg_color=self.wcfg["font_color"],
                 bg_color=self.wcfg["bkg_color"],
+                mark_width=max(self.wcfg["third_spring_position_mark_width"], 1),
+                mark_color=mark_color,
                 right_side=idx % 2,
             ) for idx in range(4)
         )
@@ -105,8 +112,14 @@ class Realtime(Overlay):
         if self.state.active:
 
             susp_set = api.read.wheel.suspension_deflection()
-            for susp, bar_susp in zip(susp_set, self.bars_susp):
-                self.update_susp(bar_susp, round(susp))
+
+            if self.wcfg["show_third_spring_position_mark"]:
+                third_set = api.read.wheel.third_spring_deflection()
+                for susp, third, bar_susp in zip(susp_set, third_set, self.bars_susp):
+                    self.update_susp_third(bar_susp, round(susp), third)
+            else:
+                for susp, bar_susp in zip(susp_set, self.bars_susp):
+                    self.update_susp(bar_susp, round(susp))
 
     # GUI update methods
     def update_susp(self, target, data):
@@ -115,3 +128,10 @@ class Realtime(Overlay):
             target.last = data
             target.input_color = self.susp_color[data < 0]
             target.update_input(abs(data))
+
+    def update_susp_third(self, target, data, third):
+        """Suspension position with third spring"""
+        if target.last != data:
+            target.last = data
+            target.input_color = self.susp_color[data < 0]
+            target.update_input_mark(abs(data), abs(third))
